# semicolon

./: DEPLOYMENT.md  IMPLEMENTATION_DISCUSSION.md  README.md  dev.bat  dev.sh  my_settings.js  start.bat  start.sh  stop.sh  웹사이트_구현_논의_내용.md
backend/: .env  .env.example  README.md  create_tables.py  pyproject.toml  semicolon.db  view_db.py
backend/app/: main.py
backend/app/api/: answers.py  auth.py  questions.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/crud/: __init__.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  response.py
backend/app/tests/: test_main.py
frontend/: .env.example  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: utils.js
frontend/src/lib/api/: answers.js  auth.js  client.js  questions.js
frontend/src/lib/components/: GuidelinesPage.svelte  Header.svelte  HelpPage.svelte  HomePage.svelte  LoginPage.svelte  QuestionCard.svelte  QuestionDetail.svelte  QuestionForm.svelte  QuestionList.svelte  RegisterPage.svelte  Sidebar.svelte  TagsPage.svelte  UsersPage.svelte
frontend/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Input.svelte
frontend/src/lib/stores/: auth.js  questions.js
frontend/src/routes/: +page.svelte
